--- a/package.json
+++ b/package.json
@@ -9,19 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@babel/runtime": "^7.26.9",
+    "axios": "^1.7.9",
+    "elevenlabs": "^1.51.0",
+    "lightweight-charts": "^4.2.2",
+    "next": "15.1.7",
+    "openai": "^4.85.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.7"
+    "react-icons": "^5.5.0",
+    "regenerator-runtime": "^0.14.1"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@babel/plugin-transform-runtime": "^7.26.9",
+    "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
-    "@eslint/eslintrc": "^3"
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
